# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-10-21 Giuseppe Aruta
  * Upgraded ColorChooser to version 9: 
   - correct #461 ColorChooser creates inconsistent schema
   - enlarged color icons 

2017-10-09 ede
  * bugfix 462: jml does not support special characters everywhere

2017-10-07 mmichaud <m.michael.michaud@orange.fr>
  * Integration of Coordinate Transformation PlugIn in OpenJUMP core

2017-10-06 mmichaud <m.michael.michaud@orange.fr>
  * Add postgis driver options to narrow database geometry type

2017-09-23 Giuseppe Aruta
  * Added Syncronize windows zoom (only) tool

2017-09-22 Giuseppe Aruta
  * Added radius/circumference/area display to DrawConstrainedCircleTool as
    suggested by Jucca [JPP-Devel] Show area while drawing circles? Sept 21 2017

2017-09-17 ede
  * fix bug 460: "Create Grid may jam OpenJUMP"
    CreateGridPlugIn is now cancelable and shows progress

2017-08-11 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Index support for SQLite/Spatialite datasources: quotes identifiers
    when generating SQL queries

2017-08-11 ede
  * PLUS: update to latest sqlite-jdbc-3.20.0.jar

2017-08-10 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Index support for SQLite/Spatialte datasources: wrong test for 
    GeoPackage spatial query bbox overlaping

2017-08-10 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Index support for SQLite/Spatialte datasources: checks if geometry
    columns are indexed and builds custom SQL queries to use index according to
    detected SQLite flavors

2017-08-05 mmichaud <m.michael.michaud@orange.fr>
  * Improvement from ioan to honor IncrementalAngle constraint even on the
    first segment

2017-07-29 mmichaud <m.michael.michaud@orange.fr>